fix(dop): fix inline form wrap issue

--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -118,7 +118,7 @@ $border-style: 1px solid $color-border;
 }
 
 .ant-form-inline {
-  flex-wrap: nowrap;
+  flex-wrap: nowrap !important;
 }
 
 div.ant-modal-body {
